# mlops-aws-platform

./: .editorconfig  .env.example  .gitignore  Makefile
docs/: README.md
docs/decisions/: inference_patterns.md
docs/runbooks/: incident_response.md  rollback.md
infra/: README.md  app.py
infra/mlops_infra/: __init__.py
infra/mlops_infra/config/: __init__.py  dev.yaml  prod.yaml  settings.py  staging.yaml
infra/mlops_infra/constructs/: __init__.py  iam.py  monitoring.py  networking.py  sagemaker.py
infra/mlops_infra/stacks/: __init__.py  cicd_stack.py  data_stack.py  iam_stack.py  monitoring_stack.py  network_stack.py  sagemaker_stack.py
infra/tests/: test_synth.py
ml/: pyproject.toml
ml/docker/: inference.Dockerfile  training.Dockerfile
ml/mlops/: __init__.py
ml/mlops/common/: __init__.py  aws_clients.py  config.py  logging.py
ml/mlops/data/: __init__.py  schemas.py  validate.py
ml/mlops/features/: __init__.py  build_features.py  feature_store.py
ml/mlops/inference/: __init__.py  handler.py  predictor.py
ml/mlops/monitoring/: __init__.py  alarms.py  drift.py
ml/mlops/pipelines/: __init__.py  promote_model.py  sagemaker_pipeline.py
ml/mlops/training/: __init__.py  evaluate.py  metrics.py  train.py
ml/tests/: test_features.py  test_inference.py  test_training.py
pipelines/: README.md
