[project]
name = "mlops-ml"
version = "0.1.0"
description = "ML/MLOps application code for the AWS MLOps platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "boto3>=1.34.0",
  "botocore>=1.34.0",
  "pydantic>=2.6.0",
  "pyyaml>=6.0.1",
  "python-dotenv>=1.0.1",
  "requests>=2.31.0",
  "numpy>=1.26.0",
  "pandas>=2.1.0",
  "scikit-learn>=1.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0",
  "ruff>=0.6.0",
  "mypy>=1.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
